[ADD] 결과 화면 페이지 html 파일 1차 완성

--- a/html/result.html
+++ b/html/result.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href = "result.css">
+    <link rel="stylesheet" type="text/css" href = "../css/result.css">
     <title>Result Page</title>
 </head>
 <body>
@@ -39,16 +39,26 @@
             </ul>
         </div>
         <div id="friend_box">
-            <div>
+            <div class="text_white">
                 나와 잘 맞는 해양 동물은?
             </div>
-            <div class="result_content_color" >
-                <div >사진 1</div>
-                <div>사진 2</div>
+            <div class="result_content_color result_wrapper" >
+                <div class="result_circle"></div>
+                <div class="result_circle"></div>
             </div>
         </div>
         <div>
-            내 결과 공유하기
+            <div class="text_white result_share">
+                내 결과 공유하기
+            </div>
+            <div class="result_share_box">
+                <img src="../img/kakao.png" class="share_icon">
+                <img src="../img/instagram.png" class="share_icon">
+                <img src="../img/facebook.png" class="share_icon">
+                <img src="../img/twitter.png" class="share_icon">
+                <img src="../img/link.png" class="share_icon">
+            </div>
+            
         </div>
     </div>
 </body>
